--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
 // Components
 // ================================================================================================
 @import "components/cc-icons";
+@import "components/hyphens";
 @import "components/tutti-frutti";
 
 // Elements
