--- a/_sass/elements/_header.scss
+++ b/_sass/elements/_header.scss
@@ -2,9 +2,8 @@
   margin-top: 2em;
 
   .navbar-brand {
-    font-family: $font-family-serif;
+    font-family: $font-family-sans-serif;
     font-size: 200%;
-    font-style: italic;
     font-weight: bold;
   }
 }
