--- a/_sass/elements/_post.scss
+++ b/_sass/elements/_post.scss
@@ -7,7 +7,7 @@
     font-weight: bold;
     margin-bottom: 1em;
 
-    a { @include nice-underline(1px, 1.0); }
+    a:hover { @include nice-underline(8px) }
   }
 
   .post-date {
