--- a/_includes/head/libraries.html
+++ b/_includes/head/libraries.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/assets/css/main.css?v={{ site.asset_version }}" />
-<script type="text/javascript" src="//use.typekit.net/uwc3ots.js"></script>
+<script src="//use.typekit.net/bui4lhn.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="/assets/js/turbolinks.js?v={{ site.asset_version }}"></script>
