Use freight sans for all the things

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -49,10 +49,10 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  "freight-sans-pro", "Seravek", "Segoe UI", sans-serif !default;
-$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Constantina" ,"Charter", serif !default;
+$font-family-serif:       "Constantina" ,"Charter", "Georgia", serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   "source-code-pro", "Source Code Pro", Consolas, Menlo, Monaco, monospace !default;
-$font-family-base:        $font-family-serif !default;
+$font-family-base:        $font-family-sans-serif !default;
 
 $font-size-base:          19px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
