--- a/_assets/stylesheets/components/_cc-icons.scss
+++ b/_assets/stylesheets/components/_cc-icons.scss
@@ -1,7 +1,12 @@
 @font-face {
   font-family: 'Creative Commons Icons';
-  src: url('cc-icons/cc-icons-webfont.eot');
-  src: url('cc-icons/cc-icons-webfont.eot?#iefix') format('embedded-opentype'), url('cc-icons/cc-icons-webfont.woff') format('woff'), url('cc-icons/cc-icons-webfont.ttf') format('truetype'), url('cc-icons/cc-icons-webfont.svg#cc_iconsregular') format('svg');
+
+  src: asset-url('cc-icons/cc-icons-webfont.eot');
+  src: asset-url('cc-icons/cc-icons-webfont.eot?#iefix') format('embedded-opentype'),
+       asset-url('cc-icons/cc-icons-webfont.woff') format('woff'),
+       asset-url('cc-icons/cc-icons-webfont.ttf') format('truetype'),
+       asset-url('cc-icons/cc-icons-webfont.svg#cc_iconsregular') format('svg');
+
   font-weight: normal;
   font-style: normal;
 }
