--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <hr/>
   <div class="container">
+    <hr />
     <div class="pull-right">
       <div class="social">
         <a href="https://github.com/philtr"><span class="fa fa-github-square"></span></a>
@@ -11,7 +11,6 @@
       </div>
     </div>
 
-    <p><a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
-        Attribution-NonCommercial 3.0" class="cc-icons">cbn</a></p>
+    <p>Crafted with care by Phillip Ridlen.</p>
   </div>
 </footer>
