--- a/about.haml
+++ b/about.haml
@@ -30,8 +30,7 @@ layout: default
       * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
     * [CircleCI](https://circleci.com) for continuous deployment
 
-  The type is set in [Freight Sans](http://www.dardenstudio.com/typefaces/freight_sans) and
-  [Chaparral](https://store1.adobe.com/cfusion/store/html/index.cfm?store=OLS-US&event=displayFontPackage&code=1717).
+  The type is set in [Lato](http://www.latofonts.com).
 
   My preferred Bible translation is the [English Standard Version](http://www.esv.org/), although
   the [Lexham English Bible](http://lexhamenglishbible.com/) intrigues me as one staying as close to
