Optimize page download
- SVG on homepage
- Optimize PNGs
- Use system fonts
- Vendor only bootstrap js component I’m using

--- a/index.haml
+++ b/index.haml
@@ -5,7 +5,7 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
 
 .container.container-wide
   .mister-ridlen
-    <img src="{% asset_path phillipridlen.png %}" width="200">
+    <img src="{% asset_path phillipridlen.svg %}" width="200">
 
   %p.intro(style="text-align: center")
     I'm a Ruby developer baking up awesome digital treats at
