--- a/_assets/stylesheets/bootstrap/_variables.scss
+++ b/_assets/stylesheets/bootstrap/_variables.scss
@@ -48,10 +48,10 @@ $link-hover-decoration: underline !default;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  "Lato", "Seravek", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
-$font-family-serif:       "Constantina" ,"Charter", "Georgia", serif !default;
+$font-family-sans-serif:  -apple-system, "Avenir", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
+$font-family-serif:       "Constantina", "Charter", "Georgia", serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   "source-code-pro", "Source Code Pro", Consolas, Menlo, Monaco, monospace !default;
+$font-family-monospace:   "Source Code Pro", Consolas, Menlo, Monaco, monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
 $font-size-base:          15px !default;
