--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,6 @@
 <footer>
-  <div class="container">
-    <hr />
-    <div class="pull-right">
-      <div class="social">
-        <a href="https://github.com/philtr"><span class="fa fa-github-square"></span></a>
-        <a href="https://facebook.com/philtr"><span class="fa fa-facebook-square"></span></a>
-        <a href="http://twitter.com/philtr"><span class="fa fa-twitter-square"></span></a>
-        <a href="{{ site.rss }}"><span class="fa fa-rss-square"></span></a>
-        <a href="/contact"><span class="fa fa-envelope-square"></span></a>
-      </div>
-    </div>
-
-    <p>Crafted with care by Phillip Ridlen.</p>
-  </div>
+  <p>
+    <img src="{% asset_path phillipridlen.svg %}" class="footer-icon">
+    Crafted with care by Phillip Ridlen.
+  </p>
 </footer>
