--- a/_includes/head/libraries.html
+++ b/_includes/head/libraries.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 {% stylesheet main %}
 
-<script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/bendc/sprint/a220796dc6470cc928726a3f15192ca5389af36c/sprint.min.js"></script>
 {% javascript main %}
