--- a/about.haml
+++ b/about.haml
@@ -2,56 +2,54 @@
 layout: default
 ---
 
-.intro
-  Hi, there! On this site, you'll find an assort&shy;ment of posts about
-  <span class="fa fa-code"></span>&nbsp;pro&shy;gram&shy;ming,
-  <span class="fa fa-desktop"></span>&nbsp;tech&shy;no&shy;logy,
-  <span class="fa fa-book"></span>&nbsp;Chris&shy;tian&shy;ity,
-  <span class="fa fa-birthday-cake"></span>&nbsp;food, and
-  <span class="fa fa-leaf"></span>&nbsp;life in gen&shy;eral.
+%section.text
+  .markdown
+    :markdown
+      Hi, there! I'm a Ruby developer baking up awesome digital treats at [Oven
+      Bits](http://ovenbits.com) in Dallas. I'm not interested in freelance work,
+      but feel free to take a look at my [open source projects](/projects/). I
+      organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
+      Worth, which you (if you're located in the area) should definitely come it
+      check out&mdash;we have free pizza!
 
-:markdown
-  I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
-  Dallas. I'm not interested in freelance work, but feel free to take a look at my [open source
-  projects](/projects/). I organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of
-  Fort Worth, which, if you're located in the area, should definitely come it check out&mdash;we
-  have free pizza!
+      I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
+      7th-12th grade. I apologize in advance for the fart jokes.
 
-  I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
-  7th-12th grade. I apologize in advance for the fart jokes.
+      On this site, you’ll find an assortment of posts about
+      programming, technology, Christianity, food, and life in general.
 
-  The tech stack for this website includes:
+      The tech stack for this website includes:
 
-    * [Ruby](https://www.ruby-lang.org/), [Jekyll](http://jekyllrb.com), & [Sass](http://sass-lang.com/) to generate the site
-    * [Bootstrap](http://getbootstrap.com) and [Font Awesome](http://fontawesome.io) because I'm too lazy to do it myself
-    * [Turbolinks](https://github.com/rails/turbolinks) for speedy page loads and client-side caching
-    * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
-      * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
-      * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
-    * [CircleCI](https://circleci.com) for continuous deployment
+        * [Ruby](https://www.ruby-lang.org/), [Jekyll](http://jekyllrb.com), & [Sass](http://sass-lang.com/) to generate the site
+        * [Bootstrap](http://getbootstrap.com) and [Font Awesome](http://fontawesome.io) because I'm too lazy to do it myself
+        * [Turbolinks](https://github.com/rails/turbolinks) for speedy page loads and client-side caching
+        * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
+          * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
+          * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
+        * [CircleCI](https://circleci.com) for continuous deployment
 
-  The type is set in [Lato](http://www.latofonts.com).
+      The type should be set in [your system UI font][system-ui].
 
-  My preferred Bible translation is the [English Standard Version](http://www.esv.org/), although
-  the [Lexham English Bible](http://lexhamenglishbible.com/) intrigues me as one staying as close to
-  the original language text as possible.
+        [system-ui]: http://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
 
-  I also exist elsewhere on the internet:
+      My preferred Bible translation is the [English Standard Version](http://www.esv.org/), although
+      the [Lexham English Bible](http://lexhamenglishbible.com/) intrigues me as one staying as close to
+      the original language text as possible.
 
-    * Code on [GitHub](https://github.com/philtr)
-    * "Designs" on [Dribbble](http://dribbble.com/philtr)
-    * Tweets on [Twitter](http://twitter.com/philtr)
-    * Bad food pictures on [Instagram](https://instagram.com/philtr)
+      I also exist elsewhere on the internet:
 
-  ---
+        * Code on [GitHub](https://github.com/philtr)
+        * "Designs" on [Dribbble](http://dribbble.com/philtr)
+        * Tweets on [Twitter](http://twitter.com/philtr)
+        * Bad food pictures on [Instagram](https://instagram.com/philtr)
 
-  _Unless otherwise noted, all Scripture quotations are from the ESV&#174; Bible (The Holy Bible,
-  English Standard Version&#174;), copyright &copy; 2001 by Crossway, a publishing ministry of Good
-  News Publishers. Used by permission. All rights reserved._
+      ---
 
-  _Scripture quotations marked (LEB) are from the Lexham English Bible. Copyright 2012 [Logos Bible
-  Software][logos]. Lexham is a registered trademark of [Logos Bible Software][logos]._
+      _Unless otherwise noted, all Scripture quotations are from the ESV&#174; Bible (The Holy Bible,
+      English Standard Version&#174;), copyright &copy; 2001 by Crossway, a publishing ministry of Good
+      News Publishers. Used by permission. All rights reserved._
 
-  [logos]: http://www.logos.com/
+      _Scripture quotations marked (LEB) are from the Lexham English Bible. Copyright 2012 [Logos Bible
+      Software][logos]. Lexham is a registered trademark of [Logos Bible Software][logos]._
 
-
+      [logos]: http://www.logos.com/
