--- a/contact/thanks.haml
+++ b/contact/thanks.haml
@@ -1,14 +1,15 @@
 ---
 layout: default
 ---
-.intro
-  :markdown
-    Submit the form below, or if you'd prefer, send an email directly to p _at_ rdln _dot_ net.
+%section.contact.thanks
+  .markdown
+    :markdown
+      Submit the form below, or if you'd prefer, send an email directly to p _at_ rdln _dot_ net.
 
-%hr
+  %hr
 
-.intro
-  :markdown
-    _**Thanks! I'll be in touch with you soon.**_
+  .markdown
+    :markdown
+      _**Thanks! I'll be in touch with you soon.**_
 
 
