--- a/index.haml
+++ b/index.haml
@@ -5,16 +5,10 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
 
 .container.container-wide
   .mister-ridlen
-    <img src="{% asset_path phillipridlen.svg %}" width="200">
+    <img src="{% asset_path phillipridlen.svg %}">
 
-  %p.intro(style="text-align: center")
-    I'm a Ruby developer baking up awesome digital treats at
-    <a href="http://ovenbits.com">Oven Bits</a> in Dallas.
-  -# I'm not interested in
-  -# freelance work, but feel free to take a look at some of my
-  -# <a href="/projects">open source projects</a>. I  organize
-  -# <a href="http://rubyftw.org">Ruby FTW</a>, the Ruby enthuisast group of Fort
-  -# Worth, which, if you're located in the area, should definitely come it check
-  -# out&mdash;we have free pizza!
+    %p
+      I'm a Ruby developer baking up awesome digital treats at
+      <a href="http://ovenbits.com">Oven Bits</a> in Dallas.
 
 
