--- a/_assets/stylesheets/base/_grid-settings.scss
+++ b/_assets/stylesheets/base/_grid-settings.scss
@@ -1,14 +1,12 @@
-@import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
+@import "../neat/neat-helpers";
 
-// Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: 1200px;
+// $visual-grid: true;
+$max-width: 40em;
 
 // Neat Breakpoints
-$medium-screen: 600px;
-$large-screen: 900px;
+$medium-screen: 415px;
+$large-screen: 38em;
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$medium-screen-up: new-breakpoint(min-width $medium-screen 8);
+$medium-screen-exact: new-breakpoint(min-width $medium-screen max-width $large-screen 8);
+$large-screen-up: new-breakpoint(min-width $large-screen 12);
