--- a/_assets/stylesheets/components/_highlight.scss
+++ b/_assets/stylesheets/components/_highlight.scss
@@ -1,14 +1,12 @@
-// https://github.com/chrissealey/tutti-frutti/blob/master/tutti-frutti.css
-
-$highlight-base: #333;
-$highlight-light: #888;
-$highlight-blue: #1b9af7;
-$highlight-green: #8bd300;
-$highlight-pink: #ed4694;
-$highlight-red: #ff4351;
-$highlight-orange: #fc880f;
-$highlight-magenta: #db49d8;
-$highlight-purple: #7b72e9;
+$highlight-base: #2f1e2e;
+$highlight-light: #8d8687;
+$highlight-blue: #06b6ef;
+$highlight-green: #48b685;
+$highlight-aqua: #5bc4bf;
+$highlight-red: #ef6155;
+$highlight-orange: #f99b15;
+$highlight-yellow: #fec418;
+$highlight-purple: #815ba4;
 
 .highlight, .highlight pre, .highlight code {
   color: $highlight-base;
@@ -20,7 +18,7 @@ $highlight-purple: #7b72e9;
   color: $highlight-green;
 }
 .highlight .o { /* operator */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .p { /* punctuation */
 }
@@ -88,7 +86,7 @@ $highlight-purple: #7b72e9;
   color: $highlight-blue;
 }
 .highlight .m { /* literal.number */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .s { /* literal.string */
   color: $highlight-orange;
@@ -111,7 +109,7 @@ $highlight-purple: #7b72e9;
   color: $highlight-purple;
 }
 .highlight .ne { /* name.exception */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .nf { /* name.function */
   background-color: transparentize($highlight-purple, .95);
@@ -119,10 +117,10 @@ $highlight-purple: #7b72e9;
   color: $highlight-purple;
 }
 .highlight .nd { /* name.decorator */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .nn { /* name.namespace */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .nt { /* name.tag */
   background-color: transparentize($highlight-blue, .95);
@@ -130,15 +128,15 @@ $highlight-purple: #7b72e9;
   color: $highlight-blue;
 }
 .highlight .nv { /* name.variable */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .nx { /* name.other */
-  background-color: transparentize($highlight-pink, .95);
+  background-color: transparentize($highlight-aqua, .95);
   border-radius: 2px;
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .ow { /* operator.word */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .w { /* text.whitespace */
   color: $highlight-light;
@@ -186,10 +184,10 @@ $highlight-purple: #7b72e9;
   color: $highlight-orange;
 }
 .highlight .ss { /* literal.string.symbol */
-  color: $highlight-magenta;
+  color: $highlight-yellow;
 }
 .highlight .bp { /* name.builtin.pseudo */
-  color: $highlight-pink;
+  color: $highlight-aqua;
 }
 .highlight .vc { /* name.variable.class */
   color: $highlight-green;
