--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,8 +1,11 @@
 ---
 layout: bare
 ---
-{% include header.html %}
 
-{{ content }}
-
-{% include footer.html %}
+<div class="container">
+  {% include header.html %}
+  <div class="container-content">
+    {{ content }}
+  </div>
+  {% include footer.html %}
+</div>
