--- a/_assets/stylesheets/base/_variables.scss
+++ b/_assets/stylesheets/base/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: -apple-system, BlinkMacSystemFont, "Avenir", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Avenir", "Fira Sans", "Segoe UI", "Helvetica Neue", "Oxygen", "Ubuntu", "Droid Sans", "Cantarell", sans-serif;
 $heading-font-family: $base-font-family;
 
 // Scale
