--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -11,6 +11,7 @@
 @import "components/markdown";
 
 @import "components/contact";
+@import "components/errors";
 @import "components/footer";
 @import "components/navigation";
 @import "components/posts";
