Oops the error page already existed

--- a/error.haml
+++ b/error.haml
@@ -1,13 +1,10 @@
 ---
-layout: bare
+layout: default
 permalink: error.html
 ---
-.container
+%section.error
   %h1 Oops!
-
-  .intro
-    :markdown
-      I can't find the page you're looking for. Perhaps if you went back to the [home page](/) you
-      could find what you were looking for? Sorry, wish I could be more help here.
-
-  %a.btn.btn-primary{ href: "/" } Home
+  %p
+    I can’t find the page you’re looking for. Perhaps if you went back to the
+    home page you could find what you were looking for? Sorry, wish I could be
+    more help here.
