--- a/index.haml
+++ b/index.haml
@@ -8,7 +8,7 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
     <img src="{% asset_path phillipridlen.svg %}">
 
     %p
-      I'm a Ruby developer baking up awesome digital treats at
-      <a href="http://ovenbits.com">Oven Bits</a> in Dallas.
+      I'm a full-stack developer baking up awesome digital treats
+      at <a href="http://ovenbits.com">Oven Bits</a> in Dallas.
 
 
