--- a/_assets/stylesheets/components/_projects.scss
+++ b/_assets/stylesheets/components/_projects.scss
@@ -2,7 +2,7 @@ section.projects {
   @include outer-container;
 
   .projects-intro {
-    font-size: 1.2em;
+    font-size: modular-scale(1);
   }
 
   .project {
