--- a/about.haml
+++ b/about.haml
@@ -4,14 +4,16 @@ layout: default
 
 %section.text
   .markdown
-    :markdown
-      Hi, there! I'm a Ruby developer baking up awesome digital treats at [Oven
-      Bits](http://ovenbits.com) in Dallas. I'm not interested in freelance work,
-      but feel free to take a look at my [open source projects](/projects/). I
-      organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
-      Worth, which you (if you're located in the area) should definitely come it
-      check out&mdash;we have free pizza!
+    .intro
+      :markdown
+        Hi, there! I'm a Ruby developer baking up awesome digital treats at [Oven
+        Bits](http://ovenbits.com) in Dallas. I'm not interested in freelance work,
+        but feel free to take a look at my [open source projects](/projects/). I
+        organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
+        Worth, which you (if you're located in the area) should definitely come it
+        check out&mdash;we have free pizza!
 
+    :markdown
       I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
       7th-12th grade. I apologize in advance for the fart jokes.
 
