--- a/_assets/stylesheets/components/_navigation.scss
+++ b/_assets/stylesheets/components/_navigation.scss
@@ -109,7 +109,7 @@ header.navigation {
     display: block;
     line-height: $navigation-height;
     overflow: hidden;
-    padding-left: 0.8em;
+    padding-right: 0.8em;
     text-align: right;
     width: 100%;
     z-index: 9999;
