Use formspree instead of formkeep (sorry thoughtbot)

--- a/contact/index.haml
+++ b/contact/index.haml
@@ -6,7 +6,7 @@ layout: default
 %section.contact
   .contact
 
-    %form{ role: "form", id: "contact", action: "https://formkeep.com/f/321d46f244f3", method: "post" }
+    %form{ role: "form", id: "contact", action: "https://formspree.io/p@rdln.net", method: "post" }
       .form-group#name-field
         %label.control-label{ for: "name" } Your Name
         %input.form-control{ id: "name", type: "text", name: "name" }
