Upgrade to turbolinks 5

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer" data-turbolinks-permanent>
   <p>
     <img src="{% asset_path phillipridlen.svg %}" class="footer-icon">
     Crafted with care by Phillip Ridlen.
