--- a/about.haml
+++ b/about.haml
@@ -9,7 +9,7 @@ layout: default
         Hi, there! I'm a Ruby developer baking up awesome digital treats at [Oven
         Bits](http://ovenbits.com) in Dallas. I'm not interested in freelance work,
         but feel free to take a look at my [open source projects](/projects/). I
-        organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
+        co-organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of Fort
         Worth, which you (if you're located in the area) should definitely come it
         check out&mdash;we have free pizza!
 
@@ -34,24 +34,9 @@ layout: default
 
         [system-ui]: http://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
 
-      My preferred Bible translation is the [English Standard Version](http://www.esv.org/), although
-      the [Lexham English Bible](http://lexhamenglishbible.com/) intrigues me as one staying as close to
-      the original language text as possible.
-
       I also exist elsewhere on the internet:
 
         * Code on [GitHub](https://github.com/philtr)
         * "Designs" on [Dribbble](http://dribbble.com/philtr)
         * Tweets on [Twitter](http://twitter.com/philtr)
         * Bad food pictures on [Instagram](https://instagram.com/philtr)
-
-      ---
-
-      _Unless otherwise noted, all Scripture quotations are from the ESV&#174; Bible (The Holy Bible,
-      English Standard Version&#174;), copyright &copy; 2001 by Crossway, a publishing ministry of Good
-      News Publishers. Used by permission. All rights reserved._
-
-      _Scripture quotations marked (LEB) are from the Lexham English Bible. Copyright 2012 [Logos Bible
-      Software][logos]. Lexham is a registered trademark of [Logos Bible Software][logos]._
-
-      [logos]: http://www.logos.com/
