No more data-turbolinks-permanent
Navigation is not what it was designed for. The site is just as
fast without it.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="navigation" id="navigation" role="banner" data-turbolinks-permanent>
+<header class="navigation" id="navigation" role="banner">
   <div class="navigation-wrapper">
     <a href="/" class="logo">
       Phillip Ridlen
